--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,45 @@
 version: '3.7'
 
 services:
+  redis:
+    image: redis:6.2.6-alpine
+    ports:
+      - '6379:6379'
+    networks:
+      - app-network
+
   server:
     build:
       context: .
       dockerfile: server.Dockerfile
     environment:
-      SERVER_HOST: "0.0.0.0"
-      SERVER_PORT: '3333'
-      CACHE_HOST: "redis"
-      CACHE_PORT: '6379'
+      - SERVER_HOST=${SERVER_HOST}
+      - SERVER_PORT=${SERVER_PORT}
+      - CACHE_HOST=${CACHE_HOST}
+      - CACHE_PORT=${CACHE_PORT}
     ports:
-      - '3333:3333'
-    image: nightlord189/tcp-pow-go/server:latest
+      - '${SERVER_PORT}:${SERVER_PORT}'
+    image: ${SERVER_IMAGE_TAG}
     restart: 'no'
     depends_on:
       - redis
+    networks:
+      - app-network
 
   client:
     build:
       context: .
       dockerfile: client.Dockerfile
     environment:
-      SERVER_HOST: "server"
-      SERVER_PORT: '3333'
-    image: nightlord189/tcp-pow-go/client:latest
+      - SERVER_HOST=${CLIENT_SERVER_HOST}
+      - SERVER_PORT=${CLIENT_SERVER_PORT}
+    image: ${CLIENT_IMAGE_TAG}
     restart: 'no'
     depends_on:
       - server
+    networks:
+      - app-network
 
-  redis:
-      image: redis:6.2.6-alpine
-      ports:
-        - '6379:6379'
+networks:
+  app-network:
+    driver: bridge
